# gp-proj

./: README.md
server-side/: .gitignore  Questionnaire_Model.h5  manage.py  pyproject.toml  requirments.txt  schema.yml
server-side/accounts/: admin.py  geolocation.py  models.py  permissions.py  serializers.py  urls.py  views.py
server-side/accounts/migrations/: 0001_initial.py  0002_alter_child_parent.py  0003_remove_child_id_remove_parent_id_and_more.py  0004_remove_customuser_latitude_and_more.py
server-side/appointments/: models.py  permissions.py  serializers.py  urls.py  views.py
server-side/appointments/migrations/: 0001_initial.py  0002_alter_appointment_unique_together_and_more.py
server-side/autism_assistant/: asgi.py  settings.py  urls.py  wsgi.py
server-side/autism_detection/: apps.py  questionnaire.py  serializers.py  urls.py  views.py
server-side/emotion_detection/: Facial_recognintion.py  urls.py  views.py
server-side/games/: models.py  permissions.py  serializers.py  urls.py  views.py
server-side/games/migrations/: 0001_initial.py  0002_alter_gamelog_level_alter_gamelog_unique_together.py  0003_alter_gamelog_player.py
server-side/reviews/: models.py  permissions.py  serializers.py  urls.py  views.py
server-side/reviews/migrations/: 0001_initial.py  0002_alter_review_comment_alter_review_parent.py  0003_alter_review_parent_alter_review_specialist.py  0004_rename_specialist_review_reviewed_user_and_more.py  (+3 more)
server-side/token_economy/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+26 files in other folders)
